fixed the issues with spacing with flex on landing page.

--- a/landingPageStyles.css
+++ b/landingPageStyles.css
@@ -15,7 +15,7 @@
 /*Main Container*/
 .mContainer{
     display:flex;
-    background-color: dimgrey;
+    background-color: lightgray;
     padding: 10px;
 }
 
@@ -36,9 +36,10 @@
 .artContainer{
     display: flex;
     background-color: lightgray;
-    width: 40%;
-    height: 400px;
-    border: black solid 5px;
+    width: 85%;
+    height: 375px;
+    
+    justify-content: space-between;
 }
 
 .fullArtContainer{
@@ -58,6 +59,7 @@
 }
 
 #h3{
+    color: black;
     font-size: 45px;
     text-align: left;
     padding: 5px;
@@ -79,8 +81,30 @@
     color: indigo;
     text-align: center;
     padding-left: 5px;
+    border: black solid 5px;
+    width: 45%;
 }
-
+#art3{ font-size: 30Px;
+    color: indigo;
+    text-align: center;
+    padding-left: 5px;
+    border: black solid 5px;
+    width: 45%;
+}
+#art4{ font-size: 30Px;
+    color: indigo;
+    text-align: center;
+    padding-left: 5px;
+    border: black solid 5px;
+    width: 45%;
+}
+#art3{ font-size: 30Px;
+    color: indigo;
+    text-align: center;
+    padding-left: 5px;
+    border: black solid 5px;
+    width: 45%;
+}
 /*Footer*/
 #ft{
     font-size: 25px;
